--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,25 @@
 # 应用名称
 spring:
-  multipart:
-    max-request-size: 100000MB
-    max-file-size: 10000MB
-    enabled: true
+  servlet:
+    multipart:
+      max-request-size: 100000MB
+      max-file-size: 100000MB
+      enabled: true
   thymeleaf:
     #关闭模板缓存(默认为true)
     cache: false
     #模板编码
-  #    encoding: utf-8
-  #    #在构建URL时添加到视图名称前的前缀（默认值：classpath:/templates/）
-  #    prefix: classpath:/templates/
-  #    #在构建URL时添加到视图名称后的后缀（默认值：.html）
-  #    suffix: .html
-  #    mode: HTML5
-  #    check-template-location: true
-  #    content-type: text/html
+#    encoding: utf-8
+#    #在构建URL时添加到视图名称前的前缀（默认值：classpath:/templates/）
+#    prefix: classpath:/templates/
+#    #在构建URL时添加到视图名称后的后缀（默认值：.html）
+#    suffix: .html
+#    mode: HTML5
+#    check-template-location: true
+#    content-type: text/html
   datasource:
     driver-class-name: org.sqlite.JDBC
-#    url: jdbc:sqlite:E:\test\sqliteDemo\sql.db
+#    url: jdbc:sqlite:E:\test\yxjrSqliteDemo\sql.db
     url: jdbc:sqlite:/home/weblogic/yxjrApp/sql.db
     username:
     password:
@@ -42,11 +43,11 @@ mybatis:
 uploadpacketPath: /home/weblogic/yxjrApp/upgrade/
 
 
-#日志上传路径 linux /home/weblogic/yxjrApp/Logs/  windows D:/update/Logs/
+  #日志上传路径 linux /home/weblogic/yxjrApp/Logs/  windows D:/update/Logs/
 #logPath: D:/update/Logs/
 logPath:  /home/weblogic/yxjrApp/Logs/
 
-#数据库存放地址
-#dbPath: E:/test/sqliteDemo/sql.db
+  #数据库存放地址
+#dbPath: E:\test\yxjrSqliteDemo\sql.db
 dbPath: /home/weblogic/yxjrApp/sql.db
 
